platform/kube/metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metrics
  template:
    metadata:
      labels:
        app: metrics
    spec:
      containers:
        - name: metrics
          image: skeletondocker/istio-services:metrics-6d16b9b5ac24ff141ec716bb0b42957824b9cbf7
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: metrics
spec:
  selector:
    app: metrics
  ports:
    - port: 8080
      name: http
