platform/kube/product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: skeletondocker/istio-services:product-bcac052fe5e42185f4a797e674e58d6aee2e1a4e
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  selector:
    app: product
  ports:
    - port: 8080
      name: http
