platform/kube/ratings.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
  template:
    metadata:
      labels:
        app: ratings
    spec:
      containers:
        - name: ratings
          image: skeletondocker/istio-services:ratings-18c77d70a46037882ad67946e4cb6fd29335dee9
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: ratings
spec:
  selector:
    app: ratings
  ports:
    - port: 8080
      name: http
