platform/kube/reviews.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
  template:
    metadata:
      labels:
        app: reviews
    spec:
      containers:
        - name: reviews
          image: skeletondocker/istio-services:reviews-48d8b8426e06f3fc7a9fb9aaf6ea9de3a510a178
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: reviews
spec:
  selector:
    app: reviews
  ports:
    - port: 8080
      name: http
