platform/kube/server_info.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server_info
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server_info
  template:
    metadata:
      labels:
        app: server_info
    spec:
      containers:
        - name: server_info
          image: skeletondocker/istio-services:server_info-c5fa357e4fd83d8dd0cd915baee5886a8c808f87
          ports:
            - containerPort: 50051
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: server_info
spec:
  selector:
    app: server_info
  ports:
    - port: 50051
      name: grpc
