platform/kube/metrics-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: metrics
spec:
  hosts:
    - "*"
  gateways:
    - istio-services-gateway
  http:
    - match:
        - uri:
            prefix: /metrics
      route:
        - destination:
            host: metrics
            port:
              number: 8080
