platform/kube/product-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product
spec:
  hosts:
    - "*"
  gateways:
    - istio-services-gateway
  http:
    - match:
        - uri:
            prefix: /product
      route:
        - destination:
            host: product
            port:
              number: 8080
