platform/kube/ratings-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
    - "*"
  gateways:
    - istio-services-gateway
  http:
    - match:
        - uri:
            prefix: /ratings
      route:
        - destination:
            host: ratings
            port:
              number: 8080
